Fix wrap around values. Add live video.

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -13,6 +13,16 @@ a {
   color: #00B7FF;
 }
 
+img#video {
+  position: fixed;
+  display: block;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+}
+
 canvas#altitude {
   //background: white;
   /*width: 200px;
